@startuml

title __DATA's Class Diagram__\n

  namespace data {
    class data.AND {
        + AND()
        + toString()
    }
  }
  

  namespace data {
    abstract class data.Dataset {
        - columnHeaders : ArrayList<String>
        - dataFrame : ArrayList<ArrayList<Double>>
        - inputCols : ArrayList<Integer>
        - name : String
        - outputCols : ArrayList<Integer>
        + addWholeRow()
        + createEmptyDataFrame()
        + findUniques()
        + getColumnHeaders()
        + getDataFrame()
        + getInputCols()
        + getName()
        + getOutputCols()
        + getRow()
        + getRowExpected()
        + getWholeRow()
        + numAttributes()
        + numEntries()
        + numInputs()
        + numOutputs()
        + setColumnHeaders()
        + setDataFrame()
        + setInputCols()
        + setName()
        + setOutputCols()
    }
  }
  

  namespace data {
    class data.OR {
        + OR()
        + toString()
    }
  }
  

  namespace data {
    class data.UserSpecified {
        - mappings : HashMap<String, Double>
        + UserSpecified()
        + UserSpecified()
        - setup()
    }
  }
  

  namespace data {
    class data.XOR {
        + XOR()
        + toString()
    }
  }
  

  data.AND -up-|> data.Dataset
  data.OR -up-|> data.Dataset
  data.UserSpecified -up-|> data.Dataset
  data.XOR -up-|> data.Dataset


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
